# velocut

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  justfile
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
crates/velocut-core/: Cargo.toml
crates/velocut-core/src/: command.rs  engine.rs  eval.rs  lib.rs  model.rs
crates/velocut-core/tests/: vectors.rs
crates/velocut-wasm/: Cargo.toml
crates/velocut-wasm/src/: lib.rs
docs/design/: scene-director.md
protocol/vectors/: 01_overlap_and_locked.json  02_split_speed_eval.json  03_trim_undo_redo.json  04_keyframes_eval.json  05_batch_atomicity.json  06_boundary_rejections.json  07_cross_track_moves.json  08_asset_audio_defaults.json  09_volume_keyframes.json  10_asset_specs.json
web/: package-lock.json  package.json  playwright.config.ts
web/apps/editor/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
web/apps/editor/public/scene-assets/: LICENSES.md  README.md  manifest.json
web/apps/editor/public/scene-assets/characters/: figure.glb
web/apps/editor/src/: App.tsx  main.tsx  styles.css
web/apps/editor/src/di/: container.ts  tokens.ts
web/apps/editor/src/services/: caption.ts  dnd.ts  engine.ts  fonts.ts  import.ts  llm.ts  motion.ts  observe.ts  projects.ts  reference.ts  scene.ts  script.ts  search.ts  tts.ts  upload.ts  videogen.ts
web/apps/editor/src/state/: history.ts  store.ts
web/apps/editor/src/types/: mp4box.d.ts
web/apps/editor/src/ui/: AgentConsole.tsx  AssetPanel.tsx  DirectorPanel.tsx  HistoryPanel.tsx  InspectorPanel.tsx  PreviewPanel.tsx  ProjectMenu.tsx  ResizeHandle.tsx  SceneFields.tsx  SceneInspector.tsx  TimelinePanel.tsx  Toolbar.tsx  useDraggable.ts
web/e2e/: smoke.spec.ts
