[workspace]
resolver = "2"
members = ["crates/velocut-core"]
# velocut-wasm is not a default member: environments without the wasm32 std
# can't build it; compile it separately with `wasm-pack build crates/velocut-wasm`.
exclude = ["crates/velocut-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/open-ribbi/velocut"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
