[package]
name = "velocut-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Velocut editing core: timeline model, command protocol, keyframe evaluation, frame graph"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The golden-vector test reads protocol/vectors/*.json directly.
